# golf-voice-agent

./: .env.example  .env_example  .gitignore  README.md  eslint.config.mjs  package.json  pyproject.toml  tsconfig.base.json
apps/backend/: README.md  package.json  tsup.config.ts
apps/backend/scripts/: seedSlots.ts
apps/backend/src/: index.ts
apps/demo-backend/: README.md  package.json  tsconfig.json  tsup.config.ts
apps/demo-backend/src/: index.ts
apps/voice-gateway/: README.md  package.json  tsup.config.ts
apps/voice-gateway/src/: index.ts
archive/: .prettierignore  package.json
backend/: __init__.py
backend/app/: config.py  db.py  main.py
backend/migrations/: 0001_init.sql  001_init.sql
backend/scripts/: seed_slots.py
infra/docker/: Dockerfile.demo-backend  Dockerfile.voice-gateway
infra/docs/: architecture.md  runbook.md
python/: README.md  pyproject.toml
python/backend/app/: config.py  db.py  main.py
python/backend/app/routes/: tools.py
python/backend/app/services/: confirmation_code.py  inventory.py  reservations.py
python/backend/scripts/: seed_slots.py
python/shared/: schemas.py
python/tests/unit/services/: _fakes.py  test_reservations.py
python/voice_gateway/app/: main.py
python/voice_gateway/app/agent/: create_agent.py
python/voice_gateway/app/mcp/: backend_server.py
python/voice_gateway/app/observability/: logger.py
python/voice_gateway/app/twilio/: twiml.py
shared/: __init__.py  schemas.py
tests/unit/: test_shared_schemas.py
voice_gateway/app/: __init__.py  backend_client.py  config.py  main.py
(+118 files in other folders)
