[project]
name = "golf-voice-agent"
version = "0.1.0"
description = "Golf voice agent for tee time reservation management."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "asyncpg>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "openai-agents>=0.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "build>=1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "voice_gateway*", "shared*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
